created isolated button component

--- a/client/src/components/AppBar/AppBar.css
+++ b/client/src/components/AppBar/AppBar.css
@@ -2,7 +2,7 @@
 	height: 100%;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-	grid-gap: 16px;
+	grid-gap: 0;
 }
 
 .AppBarBl {
