--- a/client/src/App.css
+++ b/client/src/App.css
@@ -3,8 +3,14 @@ html, body {
 	margin: 0;
 }
 
+*{
+	box-sizing: border-box;
+	padding: 0;
+	margin: 0;
+  }
+
 .App {
-	height: 100%;
+	height: 100vh;
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 	grid-gap: 0px;
