--- a/client/src/components/Card/BlackHalf.css
+++ b/client/src/components/Card/BlackHalf.css
@@ -12,6 +12,7 @@
 	display: flex;
 	justify-content: flex-end;
 	align-items: center;
+	position: relative;
 }
 
 .imgCtn {
@@ -19,10 +20,13 @@
 	width: 75%;
 	height: 50%;
 	margin: 1em 0 1em 1em;
+	position: relative;
 }
 
 .imgFit {
-	object-fit: contain;
+	object-fit: cover;
 	width: 100%;
 	height: 100%;
+	z-index: 100;
+	position: absolute;
 }
