--- a/client/src/components/Carousel/Gallery.css
+++ b/client/src/components/Carousel/Gallery.css
@@ -1,3 +1,16 @@
 .alice-carousel {
 	width: 75% !important;
 }
+
+.alice-carousel__stage-item {
+	width: 120px !important;
+	height: 120px !important;
+	border: 0.5px solid black;
+	margin: 0.25em;
+}
+
+.alice-carousel__stage-item img {
+	width: 100%;
+	height: 100%;
+	object-fit: contain;
+}
