--- a/client/src/components/AppBar/AppBar.css
+++ b/client/src/components/AppBar/AppBar.css
@@ -3,6 +3,7 @@
 	display: grid;
 	grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
 	grid-gap: 0;
+	background-color: rgba(255,255,255,0);
 }
 
 .AppBarBl {
@@ -20,7 +21,7 @@
 	display: flex;
 	flex-direction: row;
 	align-items: baseline;
-	justify-content: flex-end;
+	justify-content: space-between;
 	font-size: calc(8px + 2vmin);
 	padding: 0 4rem 1rem 4rem;
 	margin: 0;
@@ -33,5 +34,13 @@
 
 .AppBar ul {
 	list-style: none;
+	display: flex;
+	flex-direction: row;
+	align-items: baseline;
+	justify-content: space-between;
+}
+
+.AppBar li {
+	margin-left: 2em;
 }
   
