--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,7 +34,27 @@ header {
 	margin-top: 5vh;
 	height: 95vh;
 	display: grid;
+	grid-template-columns: 1fr;
+}
+
+.subtitle {
+	display: grid;
+	grid-column: 1/-1;
+	grid-row: 1/2;
+	height: 15vh;
+	grid-template-columns: 1fr;
+	width: 100%;
+	height: 100%;
+}
+
+.subbody {
+	display: grid;
+	grid-column: 1/-1;
+	grid-row: 2/3;
+	height: 15vh;
 	grid-template-columns: 1fr 1fr;
+	width: 100%;
+	height: 100%;
 }
 
 .footer {
@@ -45,4 +65,8 @@ header {
 	grid-template-columns: 1fr 1fr 1fr;
 	padding: 4rem 4rem 1rem 4rem;
 	border-top: 1px solid #dfdfdf;
+}
+
+.about {
+	margin: 4rem 4rem 1rem 4rem;
 }
