--- a/client/src/App.css
+++ b/client/src/App.css
@@ -34,7 +34,7 @@ header {
 	margin-top: 5vh;
 	height: 95vh;
 	display: grid;
-	grid-template-columns: 1fr;
+	grid-template-columns: 1fr 1fr;
 }
 
 .subtitle {
@@ -42,7 +42,7 @@ header {
 	grid-column: 1/-1;
 	grid-row: 1/2;
 	height: 15vh;
-	grid-template-columns: 1fr;
+	grid-template-columns: 1fr 1fr;
 	width: 100%;
 	height: 100%;
 }
