--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,5 +1,6 @@
 html, body {
 	height: 100%;
+	width: 100%;
 	margin: 0;
 }
 
@@ -69,4 +70,17 @@ header {
 
 .about {
 	margin: 4rem 4rem 1rem 4rem;
+}
+
+@media screen and (max-width: 1024px) {
+	.App, .container, .subtitle, .subbody, .about, .footer {
+	  height: 100%;
+	  display: grid;
+	  grid-template-columns: minmax(0, 1fr);
+	  grid-gap: 0px;
+	}
+
+	.footer {
+		border-top: none;
+	}
 }
