--- a/client/src/components/Card/BlackHalf.css
+++ b/client/src/components/Card/BlackHalf.css
@@ -29,3 +29,10 @@
 	z-index: 100;
 	position: absolute;
 }
+
+@media screen and (max-width: 1024px) {
+	.BlackHalf {
+		height: 50vh;
+		width: 100%;
+	}
+}
