--- a/client/src/components/Footer/Footer.css
+++ b/client/src/components/Footer/Footer.css
@@ -10,3 +10,18 @@ h1 {
 .icon {
 	margin-right: 1em;
 }
+
+.underline a {
+	background: 
+	  linear-gradient(to right, white, white),
+	  linear-gradient(to right, #f6f6ff, blue, #0070ff);
+	background-size: 100% 0.1em, 0 0.1em;
+	background-position: 100% 100%, 0 100%;
+	background-repeat: no-repeat;
+	transition: background-size 400ms;
+  }
+  
+.underline a:hover,
+.underline a:focus {
+	background-size: 0 0.1em, 100% 0.1em;
+}
