--- a/client/src/App.css
+++ b/client/src/App.css
@@ -72,6 +72,14 @@ header {
 	margin: 4rem 4rem 1rem 4rem;
 }
 
+a {
+	text-decoration: none;
+}
+
+a:visited {
+	color: black;
+}
+
 @media screen and (max-width: 1024px) {
 	.App, .container, .subtitle, .subbody, .about, .footer {
 	  height: 100%;
